# self-tooling-openenv

./: .gitignore  Dockerfile  Modelfile  README.md  config.yaml  inference.py  main.py  openenv.yaml  pyproject.toml  requirements-openenv.txt  requirements.txt  setup.py
.claude/: settings.local.json
agents/: __init__.py  api_agent.py  data_agent.py  email_agent.py  file_agent.py  image_analyzer.py  os_agent.py  scheduler_agent.py  terminal_agent.py  web_agent.py  workflow_agent.py
brain/: __init__.py  code_validator.py  code_validator.py.bak  decision_engine.py  memory_auditor.py  sandbox_executor.py  session_learner.py  tool_loader.py  tool_registry.py  tool_synthesizer.py  tool_synthesizer.py.bak
core/: __init__.py  checkpoint.py  context_builder.py  intent_classifier.py  llm_core.py  mcp_client.py  orchestrator.py  react_engine.py  response_cache.py
docs/: CAPABILITIES.md  DEVELOPMENT_LOG.md
memory/: __init__.py  interaction_logger.py  memory_system.py  personal_model.py
perception/: __init__.py  voice_listener.py
scripts/: _deactivate_tool.py  _test_music.py  debug_hard_mcp_tasks.py  debug_query_batch.py  generate_architecture_pdf.py  smoke_windows_mcp.py  stress_os_multitask.py  test_20_computer_use_queries.py  validate-submission.sh
server/: __init__.py  app.py  support_triage_environment.py
support_triage_env/: __init__.py  client.py  env.py  models.py  server.py  tasks.py
tests/: quick_test.py  test_brain.py  test_news.py  test_news2.py  test_suite.py
tools/: clean_memory.py
ui/: __init__.py  ui_layer.py
(+7 files in other folders)
