[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-tooling-openenv"
version = "0.1.0"
description = "A real-world OpenEnv support triage benchmark with a self-tooling JARVIS architecture."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "faheem07" }
]
dependencies = [
  "fastapi>=0.111.1",
  "uvicorn>=0.30.1",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.1",
  "openai>=1.40.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["support_triage_env", "server"]
